# xPyD-proxy

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  BOT_POLICY.md  CONTRIBUTING.md  Dockerfile  MicroPDProxyServer.py  README.md  docker-compose.yml  proxy_server.py  pyproject.toml  requirements.txt  sim_adapter.py  task_openclaw.md  tasklist_openclaw.md  tmp2b1vzk2t.yaml  tmp3o8d9fpu.yaml  tmp59qf1vim.yaml  tmp7keayxuq.yaml  tmp8_u17jp5.yaml  tmpaedduobm.yaml  tmpe8y0v3m5.yaml  tmpec4cfw4s.yaml  tmpg4268wln.yaml  tmphwv9o4yi.yaml  tmplvbok2i4.yaml  tmpn_23k5fx.yaml  tmpobis1dj_.yaml  tmppgyfqkif.yaml  tmpr7ndove9.yaml  tmpv5j1i_pm.yaml
benchmarks/: run_benchmark.sh
bot/: AUTHOR_POLICY.md  BOT_POLICY.md  BOT_POLICY_LEGACY.md  REVIEW_POLICY.md
core/: MicroPDProxyServer.py  circuit_breaker.py  config.py  discovery.py  metrics.py  registry.py  resilience.py  retry.py  topology.py  xpyd_start_proxy.sh
docs/: api_reference.md  architecture.md  cli.md  configuration.md  deployment.md  metrics.md  one_click_dummy_proxy_setup.md  resilience.md  scheduling.md  terminal_by_terminal_quickstart.md  xpyd-plan-b.html  xpyd_start_proxy_usage.md
dummy_nodes/: common.py  decode_node.py  prefill_node.py
examples/: proxy-simple.yaml  proxy.yaml
monitoring/: README.md  docker-compose.yml
tests/: conftest.py  test_MicroPDProxyServer.py  test_api_key_auth.py  test_benchmark_e2e.py  test_benchmark_integration.py  test_cache_aware.py  test_circuit_breaker.py  test_cli_and_discovery.py  test_completions_endpoint.py  test_concurrent_requests.py  test_config.py  test_consistent_hash.py  test_decode_node.py  test_dynamic_instances.py  test_instance_registry.py  test_large_payload.py  test_load_balanced_deep.py  test_metrics.py  (+19 more)
(+94 files in other folders)
